applications/hello-world2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-2
  template:
    metadata:
      labels:
        app: hello-world-2
    spec:
      containers:
        - name: hello-world-2
          image: hashicorp/http-echo2:latest
          args:
            - "-text=Hello from App 2"
          ports:
            - containerPort: 5678
