applications/hello-world2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2-service
spec:
  type: ClusterIP
  selector:
    app: hello-world-2
  ports:
    - port: 3001
      targetPort: 5678
