applications/hello-world2/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-world2
spec:
  hosts:
    - guccidemo.ddnsking.com
  gateways:
    - istio-system/homelab-gateway
  http:
    - match:
        - uri:
            prefix: /hello-world2
      route:
        - destination:
            host: hello-world-2-service
            port:
              number: 3001
          weight: 100
